Redesign. new Exceptions. Tests.